k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poker-app
  labels:
    app: poker-de-garagem
